--- a/jobappms/pom.xml
+++ b/jobappms/pom.xml
@@ -55,7 +55,13 @@
 		<version>1.18.38</version>
 		<scope>provided</scope>
 	</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.acc.app</groupId>
+            <artifactId>companyms</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
